# hexlet_pytest

./: README.md
Hexlet_pytest/: README.md
Hexlet_pytest/.github/workflows/: pyci.yml
Hexlet_pytest/tests/: test_emptiness.py  test_stack.py
hello/: pyproject.toml
hello/hello/scripts/: say_hello.py
test_module/tests/: test_capitalize.py
